--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "homepage": "https://Priyeshshrivastav.github.io/Modern-My-Portfolio1/",
   "name": "portfolio",
-  "private": true,
+  "homepage": "https://Priyeshshrivastav.github.io/My-Portfolio1/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "predeploy": " npm run build ",
-    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist"
+
   },
   "dependencies": {
     "@radix-ui/react-toast": "^1.2.14",
